--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,9 +3,11 @@
 -
   type: github
   icon: 'fab fa-github'
--
-  type: twitter
-  icon: 'fab fa-twitter'
+
+# modified, twitter is inactive
+# -
+#   type: twitter
+#   icon: 'fab fa-twitter'
 -
   type: email
   icon: 'fas fa-envelope'
@@ -20,10 +22,12 @@
 #   type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your mastodon account page
-# -
-#   type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
+
+# modified, linkedin is active
+-
+   type: linkedin
+   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+   url:  'https://www.linkedin.com/in/daeyoung-song-175486167'                  # Fill with your Linkedin homepage
 # -
 #   type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
